Sun Nov 10 07:41:22 2013  Zachary Scott  <e@zzak.io>

	* lib/weakref.rb: [DOC] fix typos by @xaviershay [Fixes GH-439]
	  https://github.com/ruby/ruby/pull/439

Sun Nov 10 06:14:39 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c (iseq_compile_each): emit opt_str_freeze if the #freeze
	  method is called on a static string literal with no arguments.

	* defs/id.def (firstline): add freeze so idFreeze is available

	* insns.def (opt_str_freeze): add opt_str_freeze instruction which
	  pushes a frozen string literal without allocating a new object if
	  String#freeze is not overriden

	* string.c (Init_String): define String#freeze

	* vm.c (vm_init_redefined_flag): define BOP_FREEZE on String class as
	  a basic operation

	* vm_insnhelper.h: ditto

	[Feature #8992] [ruby-core:57705]

Sun Nov 10 01:34:14 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_increase): sweep immediately on GC due to malloc().
	  To reduce memory usage, sweep as soon as possible.
	  This behavior is same as Ruby 2.0.0 and before.

Sun Nov 10 00:39:26 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: output version description and GC::OPTS.

Sun Nov 10 00:36:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (should_be_callable): allow private call since rb_eval_cmd
	  calls even private methods.

Sun Nov 10 00:33:17 2013  Zachary Scott  <e@zzak.io>

	* lib/racc/rdoc/grammar.en.rdoc: [DOC] fix typo by Tsuyoshi Sawada
	  [Bug #9077]

Sat Nov  9 22:35:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (Gem::Specification.load): obtain spec date from
	  VCS for the case using git, RUBY_RELEASE_DATE is the last resort.
	  probably fixes [Bug #9085].

Sat Nov  9 20:56:12 2013  Narihiro Nakamura  <authornari@gmail.com>

	* ext/objspace/object_tracing.c: use declarations in internal.h.

	* ext/objspace/objspace.c: ditto

Sat Nov  9 20:32:59 2013  Tanaka Akira  <akr@fsij.org>
